--- a/literature.bib
+++ b/literature.bib
@@ -42,7 +42,7 @@
 }
 
 @article{gamerith_linked_2016,
-	title = {Linked {Open} {Data} in {Administration} at the {Vienna} {University} of {Technology}},
+	title = {Linked {Open} {Data} at the {Vienna} {University} of {Technology} - {A} case study about research data},
 	author = {Gamerith, Stefan},
 	year = {2016},
 	keywords = {nonrefw}
@@ -235,4 +235,23 @@
 	year = {2008},
 	keywords = {refsw},
 	pages = {29}
+}
+
+@book{weiss_transferring_2013,
+	title = {Transferring {Open} {Government} {Data} into the global {Linked} {Open} {Data} {Cloud}},
+	url = {http://www.ub.tuwien.ac.at/},
+	author = {Weiss, Christian},
+	year = {2013},
+	keywords = {refsw}
+}
+
+@article{demartini_bowlogna_2013,
+	title = {The {Bowlogna} ontology: {Fostering} open curricula and agile knowledge bases for {Europe}'s higher education landscape},
+	volume = {4},
+	number = {1},
+	journal = {Semantic Web},
+	author = {Demartini, Gianluca and Enchev, Iliya and Gapany, Joël and Cudré-Mauroux, Philippe},
+	year = {2013},
+	keywords = {refsw},
+	pages = {53--63}
 }
