--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -188,7 +188,7 @@ the winner of the Vici competition, was designed to automate the production and 
 \label{related-work:austrian-open-data}
 In Austria datasets of various governmental units from different areas of life are exposed on the open data portal \texttt{data.gv.at}. Whereas this data portal is restricted to governmental units\footnote{Member of 'Cooperation OGD Austria'}, \texttt{opendataportal.at} provides a platform for anyone who wants to share data in an open way. In both cases the category \textit{'Bildung und Forschung'} (German for education and research) is especially of interest for (Linked) Open Data initiatives at Austrian universities. Overall, the published data sets are mainly localizing points of interest (libraries, museums and universities) and apart of the Vienna University of Economics more specific information like provided courses and curricula has not been published yet about universities. In fact, the Vienna University of Economics is already active and publishes mainly course information and library collections in a machine-readable and open way on their open data portal \texttt{data.wu.ac.at} and on \texttt{opendataportal.at}. All in all the amount of data concerning education and research on the mentioned Austrian data portals is negligibly at the moment of writing.
 
-Meanwhile data is exposed in machine-readable and open formats, there has been little effort taken to provide it as Linked Open Data. However, Christian Weiss has designed a system\footnote{\url{http://cweiss.net/lod/} last accessed on 15.03.2016} in connection with his master thesis\footnote{C. Weiss, 'Transferring Open Government Data into the global Linked Open Data Cloud', 2013} to provide a subset of the Open Government Data provided by Vienna (\texttt{data.wien.gv.at}) as Linked Open Data. In the same year 2013 the project LODPilot\footnote{\url{http://lodpilot.at/}} was initiated to create an infrastructure to provide the basic datasets published on \texttt{data.gv.at} and \texttt{data.wien.gv.at} as Linked Open Data.
+Meanwhile data is exposed in machine-readable and open formats, there has been little effort taken to provide it as Linked Open Data. However, Christian Weiss has designed a system\footnote{\url{http://cweiss.net/lod/} last accessed on 15.03.2016} in connection with his master thesis\cite{weiss_transferring_2013} to provide a subset of the Open Government Data provided by Vienna (\texttt{data.wien.gv.at}) as Linked Open Data. In the same year 2013 the project LODPilot\footnote{\url{http://lodpilot.at/}} was initiated to create an infrastructure to provide the basic datasets published on \texttt{data.gv.at} and \texttt{data.wien.gv.at} as Linked Open Data.
 
 Beside the open data portals, \texttt{Wegweiser}\footnote{\url{http://www.wegweiser.ac.at/}} is an early attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans in an open way. The information on Wegweiser is served only in a human readable format and therefore not easily processable by computers so that applications based on it can difficultly evolve. Furthermore, the service is not maintained any more and outdated. \texttt{Open Street Maps}\footnote{\url{https://www.openstreetmap.org/}} is a global service that make spatial information of Austria (a.o.), which has been collected by an open community, available in an open way. The University of Leipzig has build an infrastructure to provide this collected information as Linked Open Data with the project named \texttt{LinkedGeoData}\footnote{\url{http://linkedgeodata.org/About}}. \texttt{DBPedia}\footnote{\url{http://wiki.dbpedia.org/}} is another project of the mentioned university that extracts knowledge from Wikipedia and transforms it into Linked Open Data. For example, \texttt{DBPedia} contains a machine-readable description of the Vienna University of Technology\footnote{\url{http://dbpedia.org/page/Vienna_University_of_Technology}}. \texttt{Wikidata}\footnote{\url{https://www.wikidata.org/}} is a project similar to \texttt{DBPedia} and also provides knowledge about Austria in a machine-readable format.
 
@@ -343,8 +343,6 @@ Student \textit{\textbf{D}} would be willed to develop applications based on pro
 
 Overall, the interviewees were more or less cautious regarding this question.
 
-
-
 % --------------------------------------------------------------------------------------------
 %  Result: Technical architecture and challenges
 % --------------------------------------------------------------------------------------------
@@ -478,7 +476,7 @@ Nevertheless, there are techniques to integrate these diverging data sources int
 \end{lstlisting}
 Microdata and microformats work in a similar way. Not only CMSs emplyoed by the university, also course teams who are employing own information systems or student representative`s websites could  make use of this technique. It is a convenient way for the data owner to serve data in a human- and machine-readable format. The \textbf{\textit{integration tier}} shows how this data can be extracted and integrated into the system.
 
-\paragraph{Linked Open Data:} The Linked Open Data cloud (see figure \ref{fig:lod-cloud-diagram}) visualizes datasets of various domains that have been published in Linked Data format (2014)\cite{_linking_????}. Berners-Lee emphasizes in his principles for publishing Linked Data that the data shall be interlinked with external linked data to give context. Hence, the gathering of particular external datasets must also be considered by the technical architecture for the purpose of interlinking. The ways in which linked data is exposed can diverge. It can be a SPARQL endpoint (see \ref{technical-architecture-challenges:proposal:provision}), a Web API, or a RDF dump possibly published on a repository like \texttt{datahub.io}. For example, the European Library\footnote{\url{http://theeuropeanlibrary.org}} manages the collections of national libraries as well as research libraries of Europe and exports them regularly into a single RDF file (dump). The academic library of the university could interlink items of it`s own collection with the matching items of the European Library project. As a result, the academic library enriches it`s own knowledge about this item with the collected knowledge of the European Library project (e.g. contributors). 
+\paragraph{Linked Open Data:} The Linked Open Data cloud (see figure \ref{fig:lod-cloud-diagram}) visualizes datasets of various domains that have been published in Linked Data format (2014)\cite{_linking_????}. Berners-Lee emphasizes in his principles for publishing Linked Data that the data shall be interlinked with external linked data to give context. Hence, the gathering of particular linked datasets must also be considered by the technical architecture for the purpose of interlinking. The ways in which linked data is exposed can diverge. It can be a SPARQL endpoint (see \ref{technical-architecture-challenges:proposal:provision}), a Web API, or a RDF dump possibly published on a repository like \texttt{datahub.io}. For example, the European Library\footnote{\url{http://theeuropeanlibrary.org}} manages the collections of national libraries as well as research libraries of Europe and exports them regularly into a single RDF file (dump). The academic library of the university could interlink items of it`s own collection with the matching items of the European Library project. As a result, the academic library enriches it`s own knowledge about this item with the collected knowledge of the European Library project (e.g. contributors).
 
 \begin{figure}[t]
 \centering \includegraphics*[width=1.0\columnwidth]{images/technical-architecture/lod-cloud_colored_1000px.png}
@@ -503,20 +501,28 @@ The \textit{\textbf{data source tier}} represents diverging data sources, which 
 \paragraph{Vocabulary mapping} is the second step of the integration process. In this step the acquired data is translated into the system`s target schema (in section \ref{technical-architecture-challenges:proposal:vocabulary} a collection of vocabularies that may be of interest for a university`s domain is listed). The translation is definitely necessary for acquired data that has not already be transformed into Linked Data. For the proposed technical architecture, this would be the case for (semi-)structured datasets like CSV or XML. In the following, some tools are listed for transforming (semi-)structured datasets into Linked Data.
 
 \begin{description}
- 	\item[\small From Tables and Spreadsheets:] $ $
+ 	\item[\small From tables and spreadsheets:] $ $
  	\begin{itemize}
  		\item \textbf{Open Refine}\footnote{\url{http://openrefine.org/}} is a graphical tool for semi-automatically transforming and cleaning messy data including among others CSV, XML and JSON. A RDF Extension~\footnote{\url{http://lab.linkeddata.deri.ie/2010/grefine-rdf-extension/}} can be used to map the data to one`s vocabulary and to export the result into a RDF file.
- 		\item \texttt{Any23}~\footnote{\url{http://lab.linkeddata.deri.ie/2010/grefine-rdf-extension/}} or  \texttt{csv2rdf4lod} \footnote{\url{https://github.com/timrdf/csv2rdf4lod-automation/wiki}} are Java APIs for simple transformations from CSV into RDF.
+ 		\item \texttt{Any23}~\footnote{\url{http://lab.linkeddata.deri.ie/2010/grefine-rdf-extension/}} or  \texttt{csv2rdf4lod} \footnote{\url{https://github.com/timrdf/csv2rdf4lod-automation/wiki}} are Java APIs that can be used for simple transformations from CSV into RDF.
 	\end{itemize}
 	\item[\small From RSS and XML:] $ $
 	\begin{itemize}
-		\item A common used approach to transform XML into other representations is \texttt{XSLT}. W3C recommends the \texttt{GRDDL}~\footnote{\url{http://www.w3.org/TR/grddl/}} language for transforming XML into RDF. RSS-feeds using a standard XML file format, so the same tools can be applied for it.
+		\item A common used approach to transform XML into other representations is \texttt{XSLT}. W3C recommends the \texttt{GRDDL}~\footnote{\url{http://www.w3.org/TR/grddl/}} language for transforming XML into RDF. RSS feeds use a standard XML file format, so the same tools can be applied to it.
+	\end{itemize}
+	\item[\small From relational databases]  that can be accessed directly by the system\textbf{:}
+	\begin{itemize}
+		\item \texttt{R2RML} is a W3C recommandation for mapping relational databases to linked data, which can be used in two ways. First, the data can be transformed into a RDF dump by using a specified R2RML mapping. Afterwards, the RDF dump can be integrated. Secondly, SPARQL queries could be translated on-the-fly into relational queries, which is not suitable for the proposed architecture.
+	\end{itemize}
+	\item[\small From other formats:] $ $
+	\begin{itemize}
+		\item W3C made a document available named \texttt{ConverterToRdf}\footnote{\url{https://www.w3.org/wiki/ConverterToRdf}} in which tools for transforming several formats into RDF are exposed.
 	\end{itemize}
 \end{description}
 
-Furthermore, different Linked Data sources often use different vocabularies to represent data about the same type of entity.\cite{berners-lee_fractal_2008} In this case a vocabulary mapping may also be necessary in order to give the \texttt{applications} a integrated view of the stored linked data. 
+Furthermore, different Linked Data sources often use different vocabularies to represent data about the same type of entity.\cite{berners-lee_fractal_2008} In this case a vocabulary mapping may also be necessary in order to give the \textit{\textbf{applications}} a integrated view of the stored linked data. 
 
-\paragraph{Interlinking} is the third step of the integration process. As mentioned earlier, a Linked Data principle is the interlinking with other linked data to give context. Interlinking entities of the local triple store with matching entities of other datasets enriches the knowledge about these entities by giving the end user the ability to explore. \texttt{Silk} \footnote{\url{http://silkframework.org/}} is a Java framework that supports the interlinking of datasets with an own specification language. \texttt{Silk} itself provides a workbench (graphical user interface) to configure the linking and can run locally on a single server or distributed over multiple computers.  
+\paragraph{Interlinking} is the third step of the integration process. As mentioned earlier, a Linked Data principle is the interlinking with other linked data to give context. Interlinking entities of the local triple store with matching entities of other datasets enriches the knowledge about these entities by giving the end user the ability to explore. \texttt{Silk} \footnote{\url{http://silkframework.org/}} is a Java framework that supports interlinking of datasets providing an own specification language (SILK-LSL). It can handle different data sources like SPARQL endpoints and RDF dumps to interlink with. With \texttt{Silk}`s workbench the linking can be configured graphically.
 
 \paragraph{Cleansing} is the fourth step of the integration process. In this step the data that has been transformed and maybe interlinked with other datasets in the previous steps is cleaned up before it is stored (e.g. removal of ambiguities).
 
@@ -542,9 +548,22 @@ In general, the human-readable response will be a web page, which leads to a fur
 
 Whereas \textit{resolvable URIs} are a good approach to serve knowledge in a human- and machine-readable format, it can not be used to query the stored linked data. Which is why one of the previous mentioned techniques (SPARQL endpoint or RESTful API) must be employed simultaneously to provide this ability. A service that uses \textit{resolvable URIs} and \textit{content negotiation} in combination with a SPARQL endpoint is DBPedia. DBPedia also annotates the knowledge published on a web page using RDFa (see f.e. \url{http://dbpedia.org/resource/Vienna_University_of_Technology}).
 
-\subsubsection{Vocabularies}
+\subsubsection{Vocabulary}
 \label{technical-architecture-challenges:proposal:vocabulary}
-...
+Vocabularies model concepts of a knowledge domain and the relationships between them, which can be used to make datasets of this domain self-descriptive. This paper deals with the domain of a university as knowledge domain and as mentioned earlier, it is quite complex. Therefore, this section focuses on well-known vocabularies that describe high-level concepts of the educational side of a university, because this is the area students are most concerned about. There may be the need to develop an own vocabulary in order to model concepts of a university that are specific to it, but it should be avoided to define an own vocabulary from scratch. On the contrary, terms and concepts modelled by well-know vocabularies shall be reused if possible. Consequently, applications can use the resulting linked data more easily in combination with linked data exposed by others, because the data shares matching terms and concepts.
+
+\begin{description}
+	\item[Bowlogna Ontology]\footnote{\url{http://diuf.unifr.ch/main/xi/bowlogna}} is a schema proposed by Demartini et.al.~\cite{demartini_bowlogna_2013} that is aimed at European universities involved in the Bologna Reform and includes terms and concepts of this reform like for example ECTS, courses, modules, curricula and the relationship between them.
+	\item[Metadata for Learning Opportunities] (MLO) is a schema that aims to advertise learning opportunities like courses of a university. In comparison to the \texttt{Bowlogna Ontology}, \texttt{MLO} does not provide concepts for modules and curricula, but focuses on describing the course so that potential attendees get an idea of it. \enquote{Mappings between \texttt{Bowlogna Ontology} and \texttt{MLO} are naturally possible}~\cite{demartini_bowlogna_2013}.
+	
+	\item[Learning Resource Metadata initiative]\footnote{\url{http://lrmi.dublincore.net/}} is a schema that aims to provide a collection of properties for describing educational resources. This schema was adapted by \texttt{Schema.org}, which leads to the advantage that linked data about educational resources marked up with this schema is recognised by major search engines. It is a suitable high-level schema for the \textit{Resource List Management Tool} use case proposed in section \ref{lod-benefits-challenges:explored-needs-usecases:rlm}.
+	
+	\item[Resource List Ontology]\footnote{\url{http://vocab.org/resourcelist/schema}} is a schema that aims to describe collections of resources, which usually refer to bibo:Documents (bibo \dots{Bibliography Ontology\footnote{\url{http://bibliontology.com/bibo/}}}). This is as the previous one a suitable schema for the \textit{Resource List Management Tool} use case proposed in section \ref{lod-benefits-challenges:explored-needs-usecases:rlm}. It is actually used by Talis Aspire (an resource list management service) in combination with \texttt{Aiiso}.
+	
+	\item[Academic Institution Internal Structure Ontology] (Aiiso) is a schema that aims to describe the internal organizational structure of an academic institution, but does not offer a comprehensive set of properties to describe courses in comparison to \texttt{Bowlogna Ontology} and \texttt{MLO}.
+\end{description}
+
+The \textit{Linked Open Vocabularies} repository\footnote{\url{http://lov.okfn.org/dataset/lov/}} of the \textit{Open Knowledge Foundation} manages a number of vocabularies and can be used to find popular vocabularies that model required concepts and terms.
 
 \subsection{Challenges}
 \label{technical-architecture-challenges:challenges}
